fix(multiplatform): second video is cropped
- Refactor video-related files into `videos` directory for better modularity.
- Introduce `CoolVideos` component to simplify video block usage in the Multiplatform landing page.
- Replace inline video declarations with reusable `CoolVideos` component.
- Enhance `VideoBlock` to support additional `MiniVideoPlayerProps` and custom class names.
- Add CSS variables for video player styling, including aspect ratio and border radius.
- Improve reusability and maintainability by applying semantic naming and resolving duplicate code.

fix(css): update video player border radius to match design guidelines

> It seems like the videos would look better with a smaller corner radius - let's go with 16px, like the cards below.

https://www.figma.com/design/zctILurzM32OmUgLay5RpZ/KMP-landing-page-%7C-Kotlinlang-%7C-DSGN-24366

--- a/blocks/multiplatform/videos/video-block/video-block.module.css
+++ b/blocks/multiplatform/videos/video-block/video-block.module.css
@@ -28,8 +28,18 @@
 }
 
 .videoPlayer {
-    border-radius: 24px;
+    --video-player-ratio: 16 / 9;
+    --video-border-radius: 24px;
+
     overflow: hidden;
     width: 100%;
     margin: 48px 72px 72px;
+}
+
+.videoPlayer > div {
+    padding-bottom: calc(1% * (100 / (var(--video-player-ratio)))) !important;
+}
+
+.videoPlayer, .videoPlayer [data-test="video-mini-player"] {
+    border-radius: var(--video-border-radius);
 }
